--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -50,7 +50,9 @@ $OCR4Linux = $HOME/.config/OCR4Linux/OCR4Linux.sh
 
 exec = swaync &
 exec-once = hyprpaper &
-exec-once = eval $(gnome-keyring-daemon --start --components=pkcs11,secrets,ssh,gpg)
+exec-once = /usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh && eval $(/usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh)
+# exec-once = /usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
+# exec-once = eval $(gnome-keyring-daemon --start --components=pkcs11,secrets,ssh,gpg)
 exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = xhost +si:localuser:root
@@ -155,7 +157,7 @@ general {
 decoration {
     rounding = 12 
     rounding_power = 2
-    
+
     # macOS-like transparency (more subtle)
     active_opacity = 0.93
     inactive_opacity = 0.9
@@ -186,17 +188,17 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 # animations {
-#     enabled = yes, please :)
-
-#     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
+#      enabled = yes, please :)
+#
+#      # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+#
 #     bezier = easeOutQuint,0.23,1,0.32,1
 #     bezier = easeInOutCubic,0.65,0.05,0.36,1
 #     bezier = linear,0,0,1,1
 #     bezier = almostLinear,0.5,0.5,0.75,1.0
 #     bezier = quick,0.15,0,0.1,1
 #     bezier = easeOutCubic, 0.33, 1, 0.68, 1
-
+#
 #     animation = global, 1, 10, default
 #     animation = border, 1, 5.39, easeOutQuint
 #     animation = windows, 1, 4.79, easeOutQuint
@@ -246,7 +248,7 @@ animations {
     animation = fadeLayersOut, 1, 5, macFade
 
     # === Workspaces (main slider) ===
-    animation = workspaces, 1, 9, macSlide, slide
+    animation = workspaces, 1, 8, macSlide, slide
     animation = workspacesIn, 1, 8, macSlide, slide
     animation = workspacesOut, 1, 8, macSlide, slide
 }
@@ -295,7 +297,7 @@ input {
     kb_options = lv3:ralt_switch  # Right ALT will work as AltGr, default is to mimic left alt
 
     repeat_rate = 35
-    repeat_delay = 200
+    repeat_delay = 400
 
     follow_mouse = 1
 
@@ -474,7 +476,7 @@ windowrulev2 = workspace 4, class:^mpv$
 windowrulev2 = workspace 6, class:^virt-manager$
 windowrulev2 = workspace 3, class:^Code$
 windowrulev2 = workspace 5, class:^discord$
-windowrulev2 = workspace 7, class:^brave-browser$
+windowrulev2 = workspace 1, class:^brave-browser$
 windowrulev2 = workspace 9, class:^google-chrome$
 
 
