--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-# preload = ~/.config/hypr/wallpapers/ja8oh53otuxa1.jpg
-preload = ~/.config/hypr/wallpapers/Dessert_dark.jpg
-wallpaper = , ~/.config/hypr/wallpapers/Dessert_dark.jpg
+preload = ~/.config/hypr/wallpapers/wallpaper1.jpg
+# preload = ~/.config/hypr/wallpapers/Dessert_dark.jpg
+wallpaper = , ~/.config/hypr/wallpapers/wallpaper1.jpg
 
-spalsh = true
+spalsh = false
