--- a/hypr/.config/hypr/hypridle.conf
+++ b/hypr/.config/hypr/hypridle.conf
@@ -29,6 +29,6 @@ listener {
 # }
 
 listener {
-    timeout = 300                                			# 5min
+    timeout = 1600                                			# 10mins
     on-timeout = systemctl suspend-then-hibernate 			#suspend then hibernate after 30mins
 }
