--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor=,2160x1440@60, 0x0, 1.25
 $terminal = kitty
 $fileManager = nautilus
 $menu = pkill wofi || wofi --show drun
-$browser = librewolf
+$browser = brave-browser
 $email = thunderbird
 $OCR4Linux = $HOME/.config/OCR4Linux/OCR4Linux.sh
 
@@ -63,6 +63,7 @@ exec-once = hypridle &
 exec = hyprshade on blue-light-filter
 exec-once = protonvpn-app & 
 exec-once = uwsm app -- sleep 30; thunderbird &
+exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors
 # exec-once = setxkbmap -option caps:ctrl_modifier
 # exec-once = xcape -e 'Caps_Lock=Escape' -t 50
 
@@ -78,11 +79,12 @@ render {
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# env = XCURSOR_SIZE,24
-# env = XCURSOR_THEME, Catppuccin-Mocha-Dark
+env = XCURSOR_SIZE,24
+env = XCURSOR_THEME,catppuccin-mocha-dark-cursors
 
-# env = HYPRCURSOR_THEME,Catppuccin-Mocha-Dark
-# env = HYPRCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
+env = HYPRCURSOR_SIZE,24
+
 
 
 ###################
@@ -249,8 +251,8 @@ animations {
 
     # === Workspaces (main slider) ===
     animation = workspaces, 1, 8, macSlide, slide
-    animation = workspacesIn, 1, 8, macSlide, slide
-    animation = workspacesOut, 1, 8, macSlide, slide
+    animation = workspacesIn, 1, 7, macSlide, slide
+    animation = workspacesOut, 1, 7, macSlide, slide
 }
 
 
@@ -478,7 +480,9 @@ windowrulev2 = workspace 3, class:^Code$
 windowrulev2 = workspace 5, class:^discord$
 windowrulev2 = workspace 1, class:^brave-browser$
 windowrulev2 = workspace 9, class:^google-chrome$
-
+windowrulev2 = float, class:^(protonvpn-app)$
+# windowrulev2 = move 80 80, title:^(Proton VPN)$
+windowrulev2 = size 800 600, title:^(Proton VPN)$
 
 #########################
 ### XWAYLAND SETTINGS ###
