--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -48,24 +48,22 @@ $OCR4Linux = $HOME/.config/OCR4Linux/OCR4Linux.sh
 # Or execute your favorite apps at launch like this:
 
 
-exec = swaync &
-exec-once = hyprpaper &
+exec = swaync
+exec = hyprpaper
 exec-once = /usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh && eval $(/usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh)
-# exec-once = /usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
-# exec-once = eval $(gnome-keyring-daemon --start --components=pkcs11,secrets,ssh,gpg)
+exec-once = /usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
+exec-once = eval $(gnome-keyring-daemon --start --components=pkcs11,secrets,ssh,gpg)
 exec-once = dbus-update-activation-environment --systemd HYPRLAND_INSTANCE_SIGNATURE
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = xhost +si:localuser:root
-exec-once = waybar & 
-exec-once = blueman-applet &
-exec-once = nm-applet &
-exec-once = hypridle &
+# exec-once = xhost +si:localuser:root
+exec-once = waybar 
+exec-once = blueman-applet
+exec-once = nm-applet
+exec-once = hypridle
 exec = hyprshade on blue-light-filter
-exec-once = protonvpn-app & 
+exec-once = protonvpn-app
 exec-once = uwsm app -- sleep 30; thunderbird &
 exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors
-# exec-once = setxkbmap -option caps:ctrl_modifier
-# exec-once = xcape -e 'Caps_Lock=Escape' -t 50
 
 
 
@@ -189,35 +187,35 @@ decoration {
 
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
-# animations {
-#      enabled = yes, please :)
-#
-#      # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-#
-#     bezier = easeOutQuint,0.23,1,0.32,1
-#     bezier = easeInOutCubic,0.65,0.05,0.36,1
-#     bezier = linear,0,0,1,1
-#     bezier = almostLinear,0.5,0.5,0.75,1.0
-#     bezier = quick,0.15,0,0.1,1
-#     bezier = easeOutCubic, 0.33, 1, 0.68, 1
-#
-#     animation = global, 1, 10, default
-#     animation = border, 1, 5.39, easeOutQuint
-#     animation = windows, 1, 4.79, easeOutQuint
-#     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-#     animation = windowsOut, 1, 1.49, linear, popin 87%
-#     animation = fadeIn, 1, 1.73, almostLinear
-#     animation = fadeOut, 1, 1.46, almostLinear
-#     animation = fade, 1, 3.03, quick
-#     animation = layers, 1, 3.81, easeOutQuint
-#     animation = layersIn, 1, 4, easeOutQuint, fade
-#     animation = layersOut, 1, 1.5, linear, fade
-#     animation = fadeLayersIn, 1, 1.79, almostLinear
-#     animation = fadeLayersOut, 1, 1.39, almostLinear
-#     animation = workspaces, 1, 6, easeOutCubic, slide
-#     animation = workspacesIn, 1, 5, easeOutCubic, slide
-#     animation = workspacesOut, 1, 5, easeOutCubic, slide
-# }
+animations {
+    enabled = true, please :)
+
+    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
+    bezier = easeOutCubic, 0.33, 1, 0.68, 1
+
+    animation = global, 1, 10, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 1, 6, easeOutCubic, slide
+    animation = workspacesIn, 1, 5, easeOutCubic, slide
+    animation = workspacesOut, 1, 5, easeOutCubic, slide
+}
 
 
 animations {
@@ -299,9 +297,10 @@ input {
     kb_options = lv3:ralt_switch  # Right ALT will work as AltGr, default is to mimic left alt
 
     repeat_rate = 35
-    repeat_delay = 400
+    repeat_delay = 280
 
-    follow_mouse = 1
+    # follow_mouse = 1
+    follow_mouse = 2
 
     sensitivity = 0.8 # -1.0 - 1.0, 0 means no modification.
 
@@ -313,12 +312,12 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
-    workspace_swipe_distance = 600  # default is ~300
-    workspace_swipe_invert = true
-}
+# gestures {
+#     workspace_swipe = true
+#     workspace_swipe_fingers = 3
+#     workspace_swipe_distance = 600  # default is ~300
+#     workspace_swipe_invert = true
+# }
 
 cursor {
     inactive_timeout = 30
