--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -2,8 +2,8 @@
 gtk-theme-name=catppuccin-mocha-blue-standard+default
 gtk-icon-theme-name=Adwaita
 gtk-font-name=Adwaita Sans 11
-# gtk-cursor-theme-name=catppuccin-mocha-dark-cursors
-# gtk-cursor-theme-size=24
+gtk-cursor-theme-name=catppuccin-mocha-dark-cursors
+gtk-cursor-theme-size=21
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=0
@@ -15,4 +15,6 @@ gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
 gtk-application-prefer-dark-theme=1
+# gtk-cursor-theme-name=catppuccin-mocha-dark-cursors
+# gtk-cursor-theme-size=24
 gtk-key-theme-name = Emacs
