--- a/gtk-4.0/.config/gtk-4.0/settings.ini
+++ b/gtk-4.0/.config/gtk-4.0/settings.ini
@@ -2,6 +2,6 @@
 gtk-theme-name=catppuccin-mocha-blue-standard+default
 gtk-icon-theme-name=Adwaita
 gtk-font-name=Adwaita Sans 11
-# gtk-cursor-theme-name=catppuccin-mocha-dark-cursors
-# gtk-cursor-theme-size=24
+gtk-cursor-theme-name=catppuccin-mocha-dark-cursors
+gtk-cursor-theme-size=21
 gtk-application-prefer-dark-theme=1
