--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -2,4 +2,4 @@ preload = ~/.config/hypr/wallpapers/wallpaper1.jpg
 # preload = ~/.config/hypr/wallpapers/Dessert_dark.jpg
 wallpaper = , ~/.config/hypr/wallpapers/wallpaper1.jpg
 
-spalsh = false
+spalsh = true
