--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -48,8 +48,8 @@ $OCR4Linux = $HOME/.config/OCR4Linux/OCR4Linux.sh
 # Or execute your favorite apps at launch like this:
 
 
-exec = swaync
-exec = hyprpaper
+exec-once = swaync
+exec-once = hyprpaper
 exec-once = /usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh && eval $(/usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh)
 exec-once = /usr/lib/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
 exec-once = eval $(gnome-keyring-daemon --start --components=pkcs11,secrets,ssh,gpg)
@@ -60,7 +60,7 @@ exec-once = waybar
 exec-once = blueman-applet
 exec-once = nm-applet
 exec-once = hypridle
-exec = hyprshade on blue-light-filter
+exec-once = hyprshade on blue-light-filter
 exec-once = protonvpn-app
 exec-once = uwsm app -- sleep 30; thunderbird &
 exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors
@@ -187,70 +187,102 @@ decoration {
 
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
+
+# Default Animations
+
+# animations {
+#     enabled = true, please :)
+#
+#     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+#
+#     bezier = easeOutQuint,0.23,1,0.32,1
+#     bezier = easeInOutCubic,0.65,0.05,0.36,1
+#     bezier = linear,0,0,1,1
+#     bezier = almostLinear,0.5,0.5,0.75,1.0
+#     bezier = quick,0.15,0,0.1,1
+#     bezier = easeOutCubic, 0.33, 1, 0.68, 1
+#
+#     animation = global, 1, 10, default
+#     animation = border, 1, 5.39, easeOutQuint
+#     animation = windows, 1, 4.79, easeOutQuint
+#     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+#     animation = windowsOut, 1, 1.49, linear, popin 87%
+#     animation = fadeIn, 1, 1.73, almostLinear
+#     animation = fadeOut, 1, 1.46, almostLinear
+#     animation = fade, 1, 3.03, quick
+#     animation = layers, 1, 3.81, easeOutQuint
+#     animation = layersIn, 1, 4, easeOutQuint, fade
+#     animation = layersOut, 1, 1.5, linear, fade
+#     animation = fadeLayersIn, 1, 1.79, almostLinear
+#     animation = fadeLayersOut, 1, 1.39, almostLinear
+#     animation = workspaces, 1, 6, easeOutCubic, slide
+#     animation = workspacesIn, 1, 5, easeOutCubic, slide
+#     animation = workspacesOut, 1, 5, easeOutCubic, slide
+# }
+
+
+# Mac Inspired Animations
+
+# animations {
+#     enabled = true
+#
+#     # === Bezier curves (unchanged) ===
+#     bezier = macSlide, 0.25, 1, 0.5, 1
+#     bezier = macFade, 0.3, 0, 0.4, 1
+#     bezier = macPop, 0.4, 0, 0.2, 1
+#
+#     # === Global Feedback ===
+#     animation = global, 1, 9.5, macFade
+#     animation = border, 1, 5, macFade
+#
+#     # === Windows (slower zoom + fade) ===
+#     animation = windows, 1, 5.5, macFade
+#     animation = windowsIn, 1, 4.2, macPop, popin 94%
+#     animation = windowsOut, 1, 3.2, macFade, popin 94%
+#
+#     # === Fades ===
+#     animation = fadeIn, 1, 4.5, macFade
+#     animation = fadeOut, 1, 4.5, macFade
+#     animation = fade, 1, 5, macFade
+#
+#     # === Layers ===
+#     animation = layers, 1, 5.5, macFade
+#     animation = layersIn, 1, 5.5, macFade, fade
+#     animation = layersOut, 1, 4.5, macFade, fade
+#     animation = fadeLayersIn, 1, 5, macFade
+#     animation = fadeLayersOut, 1, 5, macFade
+#
+#     # === Workspaces (main slider) ===
+#     animation = workspaces, 1, 8, macSlide, slide
+#     animation = workspacesIn, 1, 7, macSlide, slide
+#     animation = workspacesOut, 1, 7, macSlide, slide
+# }
+
+
+# JaKoolit Animations
 animations {
-    enabled = true, please :)
+  enabled = yes
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-    bezier = easeOutCubic, 0.33, 1, 0.68, 1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 6, easeOutCubic, slide
-    animation = workspacesIn, 1, 5, easeOutCubic, slide
-    animation = workspacesOut, 1, 5, easeOutCubic, slide
-}
-
-
-animations {
-    enabled = true
-
-    # === Bezier curves (unchanged) ===
-    bezier = macSlide, 0.25, 1, 0.5, 1
-    bezier = macFade, 0.3, 0, 0.4, 1
-    bezier = macPop, 0.4, 0, 0.2, 1
-
-    # === Global Feedback ===
-    animation = global, 1, 9.5, macFade
-    animation = border, 1, 5, macFade
-
-    # === Windows (slower zoom + fade) ===
-    animation = windows, 1, 5.5, macFade
-    animation = windowsIn, 1, 4.2, macPop, popin 94%
-    animation = windowsOut, 1, 3.2, macFade, popin 94%
-
-    # === Fades ===
-    animation = fadeIn, 1, 4.5, macFade
-    animation = fadeOut, 1, 4.5, macFade
-    animation = fade, 1, 5, macFade
-
-    # === Layers ===
-    animation = layers, 1, 5.5, macFade
-    animation = layersIn, 1, 5.5, macFade, fade
-    animation = layersOut, 1, 4.5, macFade, fade
-    animation = fadeLayersIn, 1, 5, macFade
-    animation = fadeLayersOut, 1, 5, macFade
-
-    # === Workspaces (main slider) ===
-    animation = workspaces, 1, 8, macSlide, slide
-    animation = workspacesIn, 1, 7, macSlide, slide
-    animation = workspacesOut, 1, 7, macSlide, slide
+  bezier = wind, 0.05, 0.9, 0.1, 1.05
+  bezier = winIn, 0.1, 1.1, 0.1, 1.1
+  bezier = winOut, 0.3, -0.3, 0, 1
+  bezier = liner, 1, 1, 1, 1
+  bezier = overshot, 0.05, 0.9, 0.1, 1.05
+  bezier = smoothOut, 0.5, 0, 0.99, 0.99
+  bezier = smoothIn, 0.5, -0.5, 0.68, 1.5
+  
+  animation = windows, 1, 6, wind, slide
+  animation = windowsIn, 1, 5, winIn, slide
+  animation = windowsOut, 1, 3, smoothOut, slide
+  animation = windowsMove, 1, 5, wind, slide
+  animation = border, 1, 1, liner
+  animation = borderangle, 1, 180, liner, loop #used by rainbow borders and rotating colors
+  animation = fade, 1, 3, smoothOut
+  animation = workspaces, 1, 5, overshot
+  
+  # animations for -git or version >0.42.0
+  animation = workspacesIn, 1, 5, winIn, slide
+  animation = workspacesOut, 1, 5, winOut, slide
 }
 
 
@@ -467,6 +499,7 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+
 # Force apps to always open in specific workspaces
 windowrulev2 = workspace 10 silent, class:^(thunderbird)$
 windowrulev2 = workspace 1, class:^librewolf$
@@ -478,9 +511,11 @@ windowrulev2 = workspace 3, class:^Code$
 windowrulev2 = workspace 5, class:^discord$
 windowrulev2 = workspace 1, class:^brave-browser$
 windowrulev2 = workspace 9, class:^google-chrome$
-windowrulev2 = float, class:^(protonvpn-app)$
-# windowrulev2 = move 80 80, title:^(Proton VPN)$
-windowrulev2 = size 800 600, title:^(Proton VPN)$
+windowrule = size <95% <95%, floating:1
+windowrule = center 1, floating:1   # "1" respects reserved bar area
+
+
+
 
 #########################
 ### XWAYLAND SETTINGS ###
