--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -36,7 +36,7 @@ monitor=,2160x1440@60, 0x0, 1.25
 $terminal = kitty
 $fileManager = nautilus
 $menu = pkill wofi || wofi --show drun
-$browser = brave-browser
+$browser = brave
 $email = thunderbird
 $OCR4Linux = $HOME/.config/OCR4Linux/OCR4Linux.sh
 
@@ -77,11 +77,11 @@ render {
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,22
+env = XCURSOR_SIZE,18
 env = XCURSOR_THEME,catppuccin-mocha-dark-cursors
 
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
-env = HYPRCURSOR_SIZE,22
+env = HYPRCURSOR_SIZE,18
 
 
 
@@ -503,13 +503,15 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 # Force apps to always open in specific workspaces
 windowrulev2 = workspace 10 silent, class:^(thunderbird)$
 windowrulev2 = workspace 1, class:^librewolf$
+windowrulev2 = workspace 1, class:^brave$
 windowrulev2 = workspace 2, class:^kitty$
+windowrulev2 = workspace 3, class:^Code$
 windowrulev2 = workspace 4, class:^Spotify$
 windowrulev2 = workspace 4, class:^mpv$
-windowrulev2 = workspace 6, class:^virt-manager$
-windowrulev2 = workspace 3, class:^Code$
 windowrulev2 = workspace 5, class:^discord$
-windowrulev2 = workspace 1, class:^brave-browser$
+windowrulev2 = workspace 6, class:^virt-manager$
+windowrulev2 = workspace 8, class:^Mullvad Browser$
+windowrulev2 = workspace 8, class:^librewolf$
 windowrulev2 = workspace 9, class:^google-chrome$
 windowrule = size <95% <95%, floating:1
 windowrule = center 1, floating:1   # "1" respects reserved bar area
