--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -15,7 +15,7 @@
         "custom/notification"
     ],
     "modules-right": [
-        // "custom/network-speed",
+        "custom/network-speed",
         "tray",
         "network",
         "mpd",
