--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -77,11 +77,11 @@ render {
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,18
+env = XCURSOR_SIZE,16
 env = XCURSOR_THEME,catppuccin-mocha-dark-cursors
 
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
-env = HYPRCURSOR_SIZE,18
+env = HYPRCURSOR_SIZE,16
 
 
 
@@ -373,7 +373,7 @@ $mainMod = ALT
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+# bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
