--- a/hypr/.config/hypr/hypridle.conf
+++ b/hypr/.config/hypr/hypridle.conf
@@ -1,3 +1,30 @@
+# general {
+#     lock_cmd = pidof hyprlock || hyprlock
+#     before_sleep_cmd = loginctl lock-session
+#     after_sleep_cmd = hyprctl dispatch dpms on
+# }
+#
+# listener {
+#     timeout = 120                                # 4min
+#     on-timeout = brightnessctl -s set 5% && 	 # set monitor backlight to minimum
+#     on-resume = brightnessctl -r                 # monitor backlight restore
+# }
+#
+# # turn off keyboard backlight
+# listener { 
+#     timeout = 120                                          # 4min
+#     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight
+#     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight
+# }
+#
+# # suspend then hibernate
+# listener {
+#     timeout = 1600                                			# 10mins
+#     on-timeout = systemctl suspend-then-hibernate 			#suspend then hibernate after 30mins
+# }
+
+
+
 general {
     lock_cmd = pidof hyprlock || hyprlock
     before_sleep_cmd = loginctl lock-session
@@ -5,30 +32,29 @@ general {
 }
 
 listener {
-    timeout = 240                                # 4min
-    on-timeout = brightnessctl -s set 5%	 # set monitor backlight to minimum
+    timeout = 120                                # 4min
+    on-timeout = brightnessctl -s set 1% && 	 # set monitor backlight to minimum
     on-resume = brightnessctl -r                 # monitor backlight restore
 }
 
-# turn off keyboard backlight
 listener { 
-    timeout = 240                                          # 4min
-    on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight
-    on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight
+    timeout = 120
+    on-timeout = brightnessctl -sd rgb:kbd_backlight set 0
+    on-resume = brightnessctl -rd rgb:kbd_backlight
 }
 
-# listener {
-#     timeout = 300                                 # 5min
-#     on-timeout = loginctl lock-session            # lock screen when timeout has passed
-# }
-
-# listener {
-#     timeout = 300                                                     # 5.5min
-#     on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
-#     on-resume = hyprctl dispatch dpms on && brightnessctl -r          # screen on when activity is detected
-# }
+listener {
+    timeout = 180
+    on-timeout = pidof hyprlock || hyprlock
+}
 
 listener {
-    timeout = 1600                                			# 10mins
-    on-timeout = systemctl suspend-then-hibernate 			#suspend then hibernate after 30mins
+    timeout = 180
+    on-timeout = hyprctl dispatch dpms off
+    on-resume = hyprctl dispatch dpms on
+}
+
+listener {
+    timeout = 600
+    on-timeout = systemctl suspend-then-hibernate
 }
