--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -546,3 +546,9 @@ general {
 debug {
     disable_logs = false
 }
+
+
+
+# Set dark mode systemwide
+# exec = gsettings set org.gnome.desktop.interface gtk-theme "catppuccin-gtk-theme-mocha"
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
