fixed workspace hardcodings

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -36,9 +36,17 @@ monitor=,2160x1440@60, 0x0, 1.25
 $terminal = kitty
 $fileManager = nautilus
 $menu = pkill wofi || wofi --show drun
-$browser = brave
-$email = thunderbird
+$browser = brave-browser
 $OCR4Linux = $HOME/.config/OCR4Linux/OCR4Linux.sh
+$privacyBrowser1 = librewolf
+$privacyBrowser2 = "Mullvad Browser"
+$mail = thunderbird
+$ide = code
+$music = spotify
+$video = mpv
+$chat = discord
+$vm = virt-manager
+$workBrowser = google-chrome
 
 #################
 ### AUTOSTART ###
@@ -501,18 +509,17 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 
 
 # Force apps to always open in specific workspaces
-windowrulev2 = workspace 10 silent, class:^(thunderbird)$
-windowrulev2 = workspace 1, class:^librewolf$
-windowrulev2 = workspace 1, class:^brave$
-windowrulev2 = workspace 2, class:^kitty$
-windowrulev2 = workspace 3, class:^Code$
-windowrulev2 = workspace 4, class:^Spotify$
-windowrulev2 = workspace 4, class:^mpv$
-windowrulev2 = workspace 5, class:^discord$
-windowrulev2 = workspace 6, class:^virt-manager$
-windowrulev2 = workspace 8, class:^Mullvad Browser$
-windowrulev2 = workspace 8, class:^librewolf$
-windowrulev2 = workspace 9, class:^google-chrome$
+windowrulev2 = workspace 1, class:^($browser)$
+windowrulev2 = workspace 2, class:^($terminal)$
+windowrulev2 = workspace 3, class:^($ide)$
+windowrulev2 = workspace 4, class:^($music)$
+windowrulev2 = workspace 4, class:^($video)$
+windowrulev2 = workspace 5, class:^($chat)$
+windowrulev2 = workspace 6, class:^($vm)$
+windowrulev2 = workspace 8, class:^($privacyBrowser1|$privacyBrowser2)$
+windowrulev2 = workspace 9, class:^($workBrowser)$
+windowrulev2 = workspace 10 silent, class:^($mail)$
+
 windowrule = size <95% <95%, floating:1
 windowrule = center 1, floating:1   # "1" respects reserved bar area
 
