--- a/hypr/.config/hypr/hypridle.conf
+++ b/hypr/.config/hypr/hypridle.conf
@@ -32,7 +32,7 @@ general {
 }
 
 listener {
-    timeout = 120                                # 4min
+    timeout = 120
     on-timeout = brightnessctl -s set 1% && 	 # set monitor backlight to minimum
     on-resume = brightnessctl -r                 # monitor backlight restore
 }
