--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ $menu = pkill wofi || wofi --show drun
 $browser = brave-browser
 $OCR4Linux = $HOME/.config/OCR4Linux/OCR4Linux.sh
 $privacyBrowser1 = librewolf
-$privacyBrowser2 = "Mullvad Browser"
+$privacyBrowser2 = Mullvad Browser
 $mail = thunderbird
 $ide = code
 $music = spotify
@@ -47,6 +47,7 @@ $video = mpv
 $chat = discord
 $vm = virt-manager
 $workBrowser = google-chrome
+$tor = Tor Browser
 
 #################
 ### AUTOSTART ###
@@ -181,8 +182,8 @@ decoration {
     # macOS-style blur (more intense and smooth)
     blur {
         enabled = true
-        size = 10
-        passes = 3
+        size = 8
+        passes = 1
         vibrancy = 0.3
         brightness = 1.0
         contrast = 1.0
@@ -345,7 +346,7 @@ input {
 
     touchpad {
         natural_scroll = true
-        scroll_factor = 0.1
+        scroll_factor = 1.5
     }
 
 }
@@ -518,7 +519,10 @@ windowrulev2 = workspace 5, class:^($chat)$
 windowrulev2 = workspace 6, class:^($vm)$
 windowrulev2 = workspace 8, class:^($privacyBrowser1|$privacyBrowser2)$
 windowrulev2 = workspace 9, class:^($workBrowser)$
-windowrulev2 = workspace 10 silent, class:^($mail)$
+
+windowrulev2 = workspace 10, class:^($tor)$
+
+
 
 windowrule = size <95% <95%, floating:1
 windowrule = center 1, floating:1   # "1" respects reserved bar area
