--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -7,7 +7,7 @@ $font = JetBrainsMono Nerd Font
 # GENERAL
 general {
     disable_loading_bar = false
-    hide_cursor = true
+    hide_cursor = false
 }
 
 # # BACKGROUND
@@ -22,7 +22,7 @@ general {
 background {
     monitor =
     path = screenshot   # keep screenshot for lock blur
-    blur_passes = 8     # more passes = softer blur
+    blur_passes = 4     # more passes = softer blur
     blur_size = 8       # bigger kernel = apple-like
     color = rgba(24,24,37,0.45)  # translucent dark overlay
     brightness = 0.9    # slight brightness lift
