structured and made compatible with hyprland 0.53

--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,5 +1,9 @@
-preload = ~/.config/hypr/wallpapers/wallpaper1.jpg
-# preload = ~/.config/hypr/wallpapers/Dessert_dark.jpg
-wallpaper = , ~/.config/hypr/wallpapers/wallpaper1.jpg
+wallpaper {
+    monitor =
+    path = /home/novice/.config/hypr/wallpapers/wallpaper1.jpg
+    fit_mode = cover
+}
 
-spalsh = true
+splash = true
+splash_offset = 20      # optional, pixels from bottom
+splash_opacity = 0.8    # optional
