--- a/hypr/.config/hypr/config/environment.conf
+++ b/hypr/.config/hypr/config/environment.conf
@@ -6,8 +6,8 @@
 # Cursor
 env = XCURSOR_SIZE,16
 env = XCURSOR_THEME,catppuccin-mocha-dark-cursors
-env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
 env = HYPRCURSOR_SIZE,16
+env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
 
 # XWayland settings
 xwayland {
@@ -24,3 +24,6 @@ env = QT_SCALE_FACTOR,1            # Let Hyprland handle QT
 
 # Gtk settings
 env = GDK_SCALE,1                  # Prevent GTK double-scaling
+
+# Force xwayland apps to use wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
