update keybinds for media and workspaces

--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -93,13 +93,8 @@ bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
 bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
 
 # Special workspace (scratchpad) - Magic workspace
-bind = $mainMod, M, togglespecialworkspace, magic
-bind = $mainMod SHIFT, M, movetoworkspace, special:magic
-
-# Spotify special workspace
-# Use pgrep to check if spotify is running, if not launch it
-bind = $mainMod, S, exec, pgrep -x spotify || spotify
-bind = $mainMod, S, togglespecialworkspace, spotify
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through workspaces with mouse
 bind = $mainMod, mouse_down, workspace, e+1
@@ -118,7 +113,11 @@ bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 
 # Media control (requires playerctl)
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+# bindl = , XF86AudioNext, exec, playerctl next
+# bindl = , XF86AudioPause, exec, playerctl play-pause
+# bindl = , XF86AudioPlay, exec, playerctl play-pause
+# bindl = , XF86AudioPrev, exec, playerctl previous
+bind = $mainMod SHIFT, A, exec, playerctl previous
+bind = $mainMod SHIFT, S, exec, playerctl play-pause
+bind = $mainMod Shift, D, exec, playerctl next
+
