--- a/hypr/.config/hypr/config/windowrules.conf
+++ b/hypr/.config/hypr/config/windowrules.conf
@@ -26,11 +26,11 @@ windowrule {
 }
 
 # Floating window size and position
-windowrule {
-    name = float-size
-    size = (monitor_w*0.95) (monitor_h*0.95)
-    match:float = 1
-}
+# windowrule {
+#     name = float-size
+#     size = (monitor_w*0.95) (monitor_h*0.95)
+#     match:float = 1
+# }
 
 windowrule {
     name = float-center
@@ -53,8 +53,8 @@ windowrule {
 
 # Spotify special workspace configuration
 windowrule {
-    name = spotify-special-workspace
-    workspace = special:spotify
+    name = spotify-workspace
+    workspace = 4
     match:class = [Ss]potify
 }
 
@@ -110,15 +110,15 @@ windowrule {
 }
 
 # Example opacity rules (uncomment if needed)
-# windowrule {
-#     name = kitty-opacity
-#     opacity = 0.9 0.9
-#     match:class = kitty
-# }
+windowrule {
+    name = kitty-opacity
+    opacity = 0.9 0.9
+    match:class = kitty
+}
 
 # Example floating rules (uncomment if needed)
-# windowrule {
-#     name = float-pavucontrol
-#     float = true
-#     match:class = pavucontrol
-# }
+windowrule {
+    name = float-pavucontrol
+    float = true
+    match:class = pavucontrol
+}
