Map leftalt to leftmeta

--- a/keyd/.config/keyd/default.conf
+++ b/keyd/.config/keyd/default.conf
@@ -1,8 +1,18 @@
 [ids]
+
 *
 
 [main]
-capslock = overload(control, esc)
-leftctrl = noop
+# Change leftalt to leftmeta
+leftalt = leftmeta
+
+# Maps capslock to escape when pressed and control when held.
+# capslock = overload(control, esc)
+capslock = esc
+
+# Remaps the escape key to capslock
+esc = capslock
+
+# Maps the rightalt key to backspace
 rightalt = backspace
-backspace = noop
+
