--- a/hypr/.config/hypr/config/animations.conf
+++ b/hypr/.config/hypr/config/animations.conf
@@ -2,6 +2,7 @@
 ### ANIMATIONS    ###
 #####################
 
+
 # JaKooLit's animation style
 animations {
     enabled = yes
@@ -13,13 +14,13 @@ animations {
     bezier = overshot, 0.05, 0.9, 0.1, 1.05
     bezier = smoothOut, 0.5, 0, 0.99, 0.99
     bezier = smoothIn, 0.5, -0.5, 0.68, 1.5
-    
+
     animation = windows, 1, 6, wind, slide
     animation = windowsIn, 1, 5, winIn, slide
     animation = windowsOut, 1, 3, smoothOut, slide
     animation = windowsMove, 1, 5, wind, slide
-    animation = border, 1, 1, liner
-    animation = borderangle, 1, 180, liner, loop
+    animation = border, 1, 1, linear
+    animation = borderangle, 1, 180, linear, loop
     animation = fade, 1, 3, smoothOut
     animation = workspaces, 1, 5, overshot
     
