Add spotify to run on boot

--- a/hypr/.config/hypr/config/autostart.conf
+++ b/hypr/.config/hypr/config/autostart.conf
@@ -40,3 +40,6 @@ exec-once = uwsm app -- sleep 30; thunderbird &
 
 # Set cursor theme
 exec-once = hyprctl setcursor catppuccin-mocha-dark-cursors 16
+
+# Spotify (delayed start)
+exec-once = sh -c 'sleep 10 && pgrep -x spotify >/dev/null || spotify
