--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -3,7 +3,7 @@
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT
+$mainMod = leftmeta
 
 # Core window management
 bind = $mainMod, RETURN, exec, $terminal
@@ -41,10 +41,10 @@ binde = $mainMod CTRL, k, resizeactive, 0 -20
 binde = $mainMod CTRL, j, resizeactive, 0 20
 
 # Window movement (Vim-style with Shift)
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, L, movewindow, r
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, J, movewindow, d
+# bind = $mainMod SHIFT, H, movewindow, l
+# bind = $mainMod SHIFT, L, movewindow, r
+# bind = $mainMod SHIFT, K, movewindow, u
+# bind = $mainMod SHIFT, J, movewindow, d
 
 # Window movement (Arrow keys)
 bind = $mainMod SHIFT, left, movewindow, l 
@@ -93,8 +93,12 @@ bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
 bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
 
 # Special workspace (scratchpad) - Magic workspace
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+bind = $mainMod, M, togglespecialworkspace, magic
+bind = $mainMod SHIFT, M, movetoworkspace, special:magic
+
+# Special workspace - Spotify
+bind = $mainMod, S, togglespecialworkspace, spotify
+bind = $mainMod SHIFT, S, movetoworkspace, special:spotify
 
 # Scroll through workspaces with mouse
 bind = $mainMod, mouse_down, workspace, e+1
@@ -117,7 +121,6 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
 # bindl = , XF86AudioPause, exec, playerctl play-pause
 # bindl = , XF86AudioPlay, exec, playerctl play-pause
 # bindl = , XF86AudioPrev, exec, playerctl previous
-bind = $mainMod SHIFT, A, exec, playerctl previous
-bind = $mainMod SHIFT, S, exec, playerctl play-pause
-bind = $mainMod Shift, D, exec, playerctl next
-
+bindl = $mainMod SHIFT, H, exec, playerctl previous
+bindl = $mainMod SHIFT, SPACE, exec, playerctl play-pause
+bindl = $mainMod Shift, L, exec, playerctl next
