Update spotify ws

--- a/hypr/.config/hypr/config/windowrules.conf
+++ b/hypr/.config/hypr/config/windowrules.conf
@@ -54,7 +54,7 @@ windowrule {
 # Spotify special workspace configuration
 windowrule {
     name = spotify-workspace
-    workspace = 4
+    workspace = special:spotify silent
     match:class = [Ss]potify
 }
 
