special rules for spotify and ui adjustments

--- a/hypr/.config/hypr/config/workspaces.conf
+++ b/hypr/.config/hypr/config/workspaces.conf
@@ -2,12 +2,12 @@
 ### WORKSPACE RULES ###
 ######################
 
-# Special workspace for Spotify
-# This creates the workspace and launches Spotify when first toggled
-workspace = special:spotify, on-created-empty:spotify
-
 # Special workspace for general scratchpad (magic)
 workspace = special:magic
+
+# Special workspace for spotify
+workspace = special:spotify
+# workspace = special:spotify, on-created-empty:spotify
 
 # Optional: Define persistent workspaces
 # workspace = 1, persistent:true
@@ -19,8 +19,8 @@ workspace = special:magic
 
 # Optional: Smart gaps - no gaps when only one window
 # Uncomment the following for "smart gaps" behavior:
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
 
 # Optional: Monitor-specific workspaces
 # workspace = 1, monitor:DP-1, default:true
