overloaded caps with ctrl & esc again

--- a/keyd/.config/keyd/default.conf
+++ b/keyd/.config/keyd/default.conf
@@ -3,16 +3,22 @@
 *
 
 [main]
+
 # Change leftalt to leftmeta
 leftalt = leftmeta
+leftmeta = leftalt
 
 # Maps capslock to escape when pressed and control when held.
-# capslock = overload(control, esc)
-capslock = esc
+capslock = overload(control, esc)
 
-# Remaps the escape key to capslock
-esc = capslock
+# Overload control and esc with caps
+# capslock = esc
+# esc = capslock
 
 # Maps the rightalt key to backspace
 rightalt = backspace
+backspace = rightalt
 
+
+[overload]
+timeout = 200
