Change ws names and rules

--- a/hypr/.config/hypr/config/windowrules.conf
+++ b/hypr/.config/hypr/config/windowrules.conf
@@ -40,13 +40,13 @@ windowrule {
 
 # Force apps to specific workspaces
 windowrule {
-    name = kitty-workspace
+    name = terminal
     workspace = 2
     match:class = kitty
 }
 
 windowrule {
-    name = code-workspace
+    name = code
     workspace = 3
     match:class = code
 }
@@ -59,45 +59,39 @@ windowrule {
 }
 
 windowrule {
-    name = mpv-workspace
+    name = media
     workspace = 4
     match:class = mpv
 }
 
 windowrule {
-    name = discord-workspace
+    name = chat
     workspace = 5
     match:class = discord
 }
 
 windowrule {
-    name = vm-workspace
+    name = vm
     workspace = 6
     match:class = virt-manager
 }
 
 windowrule {
-    name = librewolf-workspace
+    name = private-browsers
     workspace = 8
-    match:class = librewolf
+    match:class = ^(librewolf|Mullvad Browser)
 }
 
 windowrule {
-    name = mullvad-workspace
-    workspace = 8
-    match:class = Mullvad Browser
-}
-
-windowrule {
-    name = chrome-workspace
+    name = work
     workspace = 9
     match:class = google-chrome
 }
 
 windowrule {
-    name = tor-workspace
+    name = personal
     workspace = 10
-    match:class = Tor Browser
+    match:class = Tor Browser 
 }
 
 # Additional useful window rules
@@ -120,5 +114,5 @@ windowrule {
 windowrule {
     name = float-pavucontrol
     float = true
-    match:class = pavucontrol
+    match:class = org.pulseaudio.pavucontrol
 }
