Optimise Hyprland experience

--- a/hypr/.config/hypr/config/environment.conf
+++ b/hypr/.config/hypr/config/environment.conf
@@ -27,3 +27,6 @@ env = GDK_SCALE,1                  # Prevent GTK double-scaling
 
 # Force xwayland apps to use wayland
 env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
+# User scripts
+env = PATH,$PATH:$HOME/.local/bin
