--- a/hypr/.config/hypr/config/keybinds.conf
+++ b/hypr/.config/hypr/config/keybinds.conf
@@ -26,7 +26,9 @@ bind = $mainMod SHIFT, P, exec, grim -g "$(slurp)" - | swappy -f -
 bind = $mainMod, X, exec, killall waybar && waybar &
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod SHIFT, SEMICOLON, exec, hyprlock
-bind = $mainMod SHIFT, T, exec, $OCR4Linux -r
+# bind = $mainMod SHIFT, T, exec, $OCR4Linux -r
+bind = $mainMod SHIFT, T, exec, tsname 
+bind = $mainMod SHIFT, SLASH, exec, notify-send -t 1000 -i appointment-soon "Time" "$(date '+%I:%M %p')"
 
 # Focus movement (Vim-style)
 bind = $mainMod, h, movefocus, l
@@ -92,9 +94,9 @@ bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 bind = $mainMod SHIFT, bracketleft, movetoworkspacesilent, -1
 bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, +1
 
-# Special workspace (scratchpad) - Magic workspace
-bind = $mainMod, M, togglespecialworkspace, magic
-bind = $mainMod SHIFT, M, movetoworkspace, special:magic
+# Special workspace - Personal
+bind = $mainMod, M, togglespecialworkspace, personal
+bind = $mainMod SHIFT, M, movetoworkspace, special:personal
 
 # Special workspace - Spotify
 bind = $mainMod, S, togglespecialworkspace, spotify
