--- a/hypr/.config/hypr/config/windowrules.conf
+++ b/hypr/.config/hypr/config/windowrules.conf
@@ -116,3 +116,15 @@ windowrule {
     float = true
     match:class = org.pulseaudio.pavucontrol
 }
+
+windowrule {
+    name = float-blueman_manager
+    float = true
+    match:class = blueman-manager
+}
+
+windowrule {
+    name = float-protonvpn
+    float = true
+    match:class = protonvpn-app
+}
