--- a/hypr/.config/hypr/config/workspaces.conf
+++ b/hypr/.config/hypr/config/workspaces.conf
@@ -2,12 +2,11 @@
 ### WORKSPACE RULES ###
 ######################
 
-# Special workspace for general scratchpad (magic)
-workspace = special:magic
+# Special workspace for personal browsing
+# workspace = special:personal
 
 # Special workspace for spotify
-workspace = special:spotify
-# workspace = special:spotify, on-created-empty:spotify
+workspace = special:spotify, on-created-empty:spotify
 
 # Optional: Define persistent workspaces
 # workspace = 1, persistent:true
