--- a/hypr/.config/hypr/config/input.conf
+++ b/hypr/.config/hypr/config/input.conf
@@ -21,6 +21,8 @@ input {
         natural_scroll = true
         scroll_factor = 0.3
     }
+
+    emulate_discrete_scroll = 1
 }
 
 # Gestures (uncomment if you want touchpad gestures)
@@ -32,7 +34,15 @@ input {
 # }
 
 # Per-device configuration example
+# device {
+#     name = epic-mouse-v1
+#     sensitivity = 1
+#     scroll_factor = 0.3
+# }
+
 device {
-    name = epic-mouse-v1
+    name = yichip-2.4g-receiver-mouse
     sensitivity = 1
+    scroll_factor = 1.0
 }
+
