--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,7 +9,6 @@ font_family JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-
 font_size 15
 
 
@@ -18,3 +17,10 @@ window_padding_width 3
 
 #background
 background_opacity 1
+
+#cursor
+cursor_shape block
+cursor_blinking no
+shell_integration no-cursor
+cursor_shape_unfocused hollow
+cursor_blink_interval 0
