--- a/swaync/.config/swaync/config.json
+++ b/swaync/.config/swaync/config.json
@@ -1,23 +1,21 @@
 {
     "$schema": "/etc/xdg/swaync/configSchema.json",
-    "ignore-gtk-theme": true,
     "positionX": "right",
     "positionY": "top",
     "layer": "overlay",
     "control-center-layer": "top",
     "layer-shell": true,
-    "layer-shell-cover-screen": true,
-    "cssPriority": "highest",
+    "cssPriority": "user",
     "control-center-margin-top": 8,
     "control-center-margin-bottom": 10,
     "control-center-margin-right": 5,
     "control-center-margin-left": 0,
     "notification-2fa-action": true,
-    "notification-inline-replies": true,
+    "notification-inline-replies": false,
     "notification-body-image-height": 100,
     "notification-body-image-width": 200,
     "timeout": 10,
-    "timeout-low": 10,
+    "timeout-low": 5,
     "timeout-critical": 0,
     "fit-to-screen": true,
     "relative-timestamps": true,
@@ -25,43 +23,24 @@
     "control-center-height": 600,
     "notification-window-width": 500,
     "keyboard-shortcuts": true,
-    "notification-grouping": true,
     "image-visibility": "when-available",
     "transition-time": 200,
     "hide-on-clear": false,
     "hide-on-action": true,
-    "text-empty": "No Notifications",
     "script-fail-notify": true,
     "scripts": {
-        "example-script": {
-            "exec": "echo 'Do something...'",
-            "urgency": "Normal"
-        },
-        "example-action-script": {
-            "exec": "echo 'Do something actionable!'",
+        "play-sound": {
+            "exec": "canberra-gtk-play -i message",
             "urgency": "Normal",
-            "run-on": "action"
-        },
-        "scripts": {
-            "play-sound": {
-                "exec": "canberra-gtk-play -i message",
-                "urgency": "Normal",
-                "run-on": "new"
-            }
+            "run-on": "receive"
         }
     },
-    "notification-visibility": {
-        "example-name": {
-            "state": "muted",
-            "urgency": "Low",
-            "app-name": "Spotify"
-        }
-    },
+    "notification-visibility": {},
     "widgets": [
-        "mpris",
         "inhibitors",
         "title",
         "dnd",
+        "mpris",
         "notifications"
     ],
     "widget-config": {
@@ -78,32 +57,12 @@
         "dnd": {
             "text": "Do Not Disturb"
         },
-        "volume": {
-            "label": ""
-        },
-        "label": {
-            "max-lines": 5,
-            "text": "Label Text"
-        },
         "mpris": {
-            "blacklist": [],
-            "autohide": false,
-            "show-album-art": "always",
-            "loop-carousel": false,
-            // "image-size": 96,
+            "image-size": 96,
             "image-radius": 12
         },
-        "buttons-grid": {
-            "buttons-per-row": 7,
-            "actions": [
-                {
-                    "label": "直",
-                    "type": "toggle",
-                    "active": true,
-                    "command": "sh -c '[[ $SWAYNC_TOGGLE_STATE == true ]] && nmcli radio wifi on || nmcli radio wifi off'",
-                    "update-command": "sh -c '[[ $(nmcli radio wifi) == \"enabled\" ]] && echo true || echo false'"
-                }
-            ]
+        "notifications": {
+            "clear-all-button": true
         }
     }
 }
