--- a/hypr/.config/hypr/hypridle.conf
+++ b/hypr/.config/hypr/hypridle.conf
@@ -33,7 +33,7 @@ general {
 
 listener {
     timeout = 120
-    on-timeout = brightnessctl -s set 1% && 	 # set monitor backlight to minimum
+    on-timeout = brightnessctl -s set 1% 	 # set monitor backlight to minimum
     on-resume = brightnessctl -r                 # monitor backlight restore
 }
 
@@ -54,7 +54,7 @@ listener {
     on-resume = hyprctl dispatch dpms on
 }
 
-listener {
-    timeout = 600
-    on-timeout = systemctl suspend-then-hibernate
-}
+# listener {
+#     timeout = 600
+#     on-timeout = systemctl suspend-then-hibernate
+# }
