Restore remove config

--- a/keyd/etc/keyd/default.conf
+++ b/keyd/etc/keyd/default.conf
@@ -1,24 +1,36 @@
 [ids]
-
 *
 
 [main]
-
-# Change leftalt to leftmeta
-leftalt = leftmeta
+# Swap Alt and Meta (Super)
+leftalt  = leftmeta
 leftmeta = leftalt
 
-# Maps capslock to escape when pressed and control when held.
+# Caps Lock:
 capslock = overload(control, esc)
 
-# Overload control and esc with caps
-# capslock = esc
-# esc = capslock
-
-# Maps the rightalt key to backspace
-rightalt = backspace
-backspace = rightalt
+# Swap Right Alt and Backspace
+rightalt  = backspace
+# backspace = rightalt
 
 
+# -----------------------------
+# Navigation on Caps (Control)
+# -----------------------------
+# [control]
+# h = left
+# j = down
+# k = up
+# l = right
+#
+# u = pageup
+# d = pagedown
+# i = home
+# o = end
+
+
+# -----------------------------
+# Overload tuning
+# -----------------------------
 [overload]
 timeout = 200
