--- a/hypr/.config/hypr/config/animations.conf
+++ b/hypr/.config/hypr/config/animations.conf
@@ -15,18 +15,35 @@ animations {
     bezier = smoothOut, 0.5, 0, 0.99, 0.99
     bezier = smoothIn, 0.5, -0.5, 0.68, 1.5
 
+    # bezier = wind,      0.03, 0.85, 0.12, 1.0
+    # bezier = winIn,     0.05, 1.0,  0.15, 1.0
+    # bezier = winOut,    0.25, 0.0,  0.4,  1.0
+    # bezier = linear,    1, 1, 1, 1
+    # bezier = overshot,  0.04, 0.9,  0.12, 1.02
+    # bezier = smoothOut, 0.4,  0.0,  0.8,  1.0
+    # bezier = smoothIn,  0.4,  0.0,  0.6,  1.0
+
     animation = windows, 1, 6, wind, slide
     animation = windowsIn, 1, 5, winIn, slide
     animation = windowsOut, 1, 3, smoothOut, slide
     animation = windowsMove, 1, 5, wind, slide
     animation = border, 1, 1, linear
-    animation = borderangle, 1, 180, linear, loop
+    # animation = borderangle, 1, 180, linear, loop
     animation = fade, 1, 3, smoothOut
-    animation = workspaces, 1, 5, overshot
-    
+    animation = workspaces, 1, 4, overshot
+
+    # animation = windows,      1, 4, wind, slide
+    # animation = windowsIn,    1, 3, winIn, slide
+    # animation = windowsOut,   1, 2, smoothOut, slide
+    # animation = windowsMove,  1, 4, wind, slide
+    # animation = border,       1, 1, linear
+    # animation = borderangle,  1, 120, linear, loop
+    # animation = fade,         1, 2, smoothOut
+    # animation = workspaces,   1, 4, overshot
+
     # Animations for v0.42.0+
-    animation = workspacesIn, 1, 5, winIn, slide
-    animation = workspacesOut, 1, 5, winOut, slide
+    # animation = workspacesIn, 1, 5, winIn, slide
+    # animation = workspacesOut, 1, 5, winOut, slide
 }
 
 # Alternative: Default Hyprland animations (uncomment to use)
